@@ -28,6 +28,10 @@
 #include "KURL.h"
 #include "PopupMenu.h"
 
+#if ENABLE(NOTIFICATIONS)
+#include "NotificationPresenter.h"
+#endif
+
 typedef struct _Evas_Object Evas_Object;
 
 namespace WebCore {
@@ -111,7 +115,7 @@ public:
 #endif
 
 #if ENABLE(NOTIFICATIONS)
-    virtual NotificationPresenter* notificationPresenter() const;
+    virtual WebCore::NotificationPresenter* notificationPresenter() const;
 #endif
 
     virtual void reachedMaxAppCacheSize(int64_t spaceNeeded);
