@@ -1,3 +1,9 @@
+2011-11-30  Gyuyoung Kim  <gyuyoung.kim@samsung.com>
+
+        Unreviewed. Fix build error when NOTIFICATIONS feature is enabled.
+
+        * WebCoreSupport/ChromeClientEfl.h:
+
 2011-11-30  Alexey Proskuryakov  <ap@apple.com>
 
         Remove an unneeded argument from FrameLoaderClient::download
